<resources>
    <string name="app_name">Marvel App</string>

    <!--    Splash Activity -->
    <string name="marvel">MARVEL</string>

    <!--    Item character and Item comic -->
    <string name="tx_item_name">Nome</string>
    <string name="tv_item_description">O sucesso nasce do querer, da determinação e persistência em se chegar a um objetivo.</string>
    <string name="text_description_empty">Esse personagem não possui descrição.</string>
    <string name="comics">Comics</string>

    <!--    Details Character Fragment -->
    <string name="empty_list_comics">Esse personagem não possui comics</string>
    <string name="close_dialog">Fechar</string>

    <!--    Search Character Fragment -->
    <string name="search_character">Pesquise um personagem</string>
    <string name="search_comic">Pesquise um HQ</string>

    <!--    Dialog delete -->
    <string name="dialog_title_text">DELETAR</string>
    <string name="dialog_message_text">Deseja realmente deletar esse personagem?</string>
    <string name="dialog_positive_text">Deletar</string>
    <string name="dialog_negative_text">Cancelar</string>

    <!--    Favorite Character Fragment -->
    <string name="message_delete_character">Deletado com sucesso!</string>
    <string name="tv_empty_text">Nada aqui.</string>

    <!--    Menu details -->
    <string name="favorite">Favoritar</string>

    <!--    Toast messages -->
    <string name="an_error_occurred">Um erro ocorreu!</string>
    <string name="saved_successfully">Salvo com sucesso!</string>

    <!--    Error -->
    <string name="error_internet_connection">Erro de conexão com a internet!</string>
    <string name="error_data_conversion_failure">Falha na conversão dos dados!</string>
    <string name="error_empty_list">Lista Vazia</string>

    <!--    title fragments -->
    <string name="title_fragment_comic">Comics</string>
    <string name="title_fragment_favorites">Favorites</string>
    <string name="title_fragment_search">Search</string>
    <string name="title_fragment_event">Events</string>
    <string name="title_fragment_detail">Details</string>
    <string name="title_fragment_characters">Characters</string>
    <string name="title_fragment_series">Series</string>
    <string name="title_about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="common_no_information">No information</string>
    <string name="see_more">See more...</string>
    <string name="favorites">Favorites</string>
    <string name="feed">Feed</string>
    <string name="home">Home</string>


</resources>