<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgCharacterDetails"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNameCharacterDetails"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tx_item_name"
                android:textColor="@color/white"
                android:background="@color/black"
                app:layout_constraintStart_toStartOf="@id/imgCharacterDetails"
                app:layout_constraintBottom_toTopOf="@id/tvDescriptionCharacterDetails"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDescriptionCharacterDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/tv_item_description"
                android:textAlignment="inherit"
                android:layout_marginHorizontal="12dp"
                android:background="@color/black"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="@id/imgCharacterDetails"
                app:layout_constraintBottom_toBottomOf="@id/imgCharacterDetails"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/comics"
                android:textColor="@color/red"
                android:textAlignment="inherit"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/imgCharacterDetails"
                app:layout_constraintTop_toBottomOf="@+id/imgCharacterDetails" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:listitem="@layout/layout_mini_cards" />

            <ProgressBar
                android:id="@+id/progressBarDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/red"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
